# claude-plugin--doc-gen

./: .gitignore  CLAUDE.md  IMPLEMENTATION-PLAN.md  README.md  mkdocs.yml
.claude-plugin/: marketplace.json  plugin.json
assets/css/: drawio-overrides.css
commands/: doc-all.md  doc-generate.md  doc-publish.md  doc-site.md  doc-update.md  doc.md
docs/adr/: 0013-drawio-sequence-diagram-rendering-pattern.md  0014-deterministic-plan-validation-via-python-schema-validator.md  README.md
mkdocs-drawio-plugin/: pyproject.toml
mkdocs-drawio-plugin/mkdocs_drawio_plugin/: __init__.py  cli.py  converter.py  encoding.py  layout.py  plugin.py  styles.py
mkdocs-drawio-plugin/mkdocs_drawio_plugin/generators/: base.py  c4.py  erd.py  flowchart.py  generic.py  sequence.py
mkdocs-drawio-plugin/mkdocs_drawio_plugin/parsers/: base.py  c4.py  erd.py  flowchart.py  generic.py  sequence.py
mkdocs-drawio-plugin/samples/: sample.md
mkdocs-drawio-plugin/tests/: test_converter.py  test_encoding.py  test_plugin.py
mkdocs-drawio-plugin/tests/test_generators/: test_base.py
mkdocs-drawio-plugin/tests/test_parsers/: test_c4.py  test_erd.py  test_flowchart.py  test_sequence.py
overrides/: main.html
skills/doc-adr/: SKILL.md
skills/doc-api/: SKILL.md
skills/doc-c4/: SKILL.md
skills/doc-data/: SKILL.md
skills/doc-data-discover/: SKILL.md
skills/doc-data-overview/: SKILL.md
skills/doc-data-queries/: SKILL.md
skills/doc-data-tables/: SKILL.md
skills/doc-devops/: SKILL.md
skills/doc-discover/: SKILL.md
skills/doc-events/: SKILL.md
skills/doc-publish/: SKILL.md
(+34 files in other folders)
